objects/Enrollment__c.object
<CustomObject>
    <fields>
        <fullName>AE_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>AE Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AE_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>AE Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AG_Not_Found__c</fullName>
        <description>Holds the AG id fro Enrollment import when a proper match is not found on account object</description>
        <encryptionScheme>None</encryptionScheme>
        <label>AG Not Found</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AG_Rank_by_Contracts__c</fullName>
        <description>The hyperlink returns on reports with words but behind the scenes reports use the hyperlink value; therefore, you may have to use the operator 'Contains' or 'Not Contains' to get reporting to work like you expect.</description>
        <formula>if(isblank(AG__c),'04 - 322 ' + 'Direct',if(isblank( AG__r.AG_Rank__c ),'Not Ranked',
    if(AG__r.AG_Rank__c&lt;10,'0'+text(AG__r.AG_Rank__c) + ' - ' + HYPERLINK('/'+ AG__c, text(AG__r.AG_Contracts_for_Year__c) + ' ' +  AG__r.Name ,'_self') ,text(AG__r.AG_Rank__c) + ' - ' + HYPERLINK('/'+ AG__c,text(AG__r.AG_Contracts_for_Year__c) + ' '+ AG__r.Name,'_self'))))</formula>
        <label>AG Rank by Contracts</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AG_Rank_by_Groups__c</fullName>
        <formula>if(isblank(AG__c),'04 - 322 ' + 'Direct',if(isblank( AG__r.AG_Rank__c ),'Not Ranked',if(AG__r.AG_Rank__c&lt;10,'0'+text(AG__r.AG_Rank__c) + ' - ' 
+ HYPERLINK('/' + AG__c, text(AG__r.AG_Groups_for_Year__c) + ' ' + AG__r.Name , '_self') ,text(AG__r.AG_Rank__c) + ' - '
 + HYPERLINK('/' + AG__c, text(AG__r.AG_Groups_for_Year__c) + ' '+ AG__r.Name, '_self'))))</formula>
        <label>AG Rank by Groups</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AG__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AG</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Enrollments_Account_AG</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AM_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>AM Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AM_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>AM Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Number__c</fullName>
        <description>Nasco number</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Account Number</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active_Contract__c</fullName>
        <formula>if(ISPICKVAL(Status__c, 'Active'), Contracts__c ,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active Contract</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Active_Group__c</fullName>
        <formula>if(ISPICKVAL(Status__c, 'Active'), Groups__c ,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active Group</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Break_Out_Level__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Break Out Level</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contracts__c</fullName>
        <label>Contracts</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Curr_Baseline_Compensation_Owner__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Curr Baseline Compensation Owner</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Curr_Baseline_Contracts__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This field holds the number of contracts during the January reporting month i.e. where Rpt_Dt__c is like 'YYYY01' e.g. 201301. The field is used to calculate baseline contracts for retention book of business reports</description>
        <label>Curr Baseline Contracts</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Curr_Fiscal_Year__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Curr Fiscal Year</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Account_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Enrollments_Account_Customer</relationshipLabel>
        <relationshipName>Enrollments_Account_Customer</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EIN__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>EIN</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enrl_Rpt_Dt__c</fullName>
        <description>Converts the RPT_DT__C format (CCYYMM) to CCYY-MM-01 then subtracts 1 day to get to the last day of the previous month then adds 35 days moving the date two months ahead then back to CCYY-MM-01 one month ahead of the original CCYYMM and finally subtract 1 day from that date to get to the last day of the original CCYYMM..
Example CCYYMM starts of as 201307
201307 to 2013-06-01 to 2013-08-?? to 2013-08-01 and finally subtracting a day making it 2013-07-31</description>
        <formula>DATEVALUE(
   TEXT(YEAR(DATEVALUE(TEXT(DATEVALUE(LEFT(Rpt_Dt__c,4)+ "-" + RIGHT(Rpt_Dt__c,2) + "-1" ) -1)) + 35)) + "-" +
   TEXT(MONTH(DATEVALUE(TEXT(DATEVALUE(LEFT(Rpt_Dt__c,4)+ "-" + RIGHT(Rpt_Dt__c,2) + "-1" ) -1)) + 35)) + "-1"
) -1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Enrl Rpt Dt</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FSP_Not_Found__c</fullName>
        <description>Holds the FSP id that was not found in the account object as entity Id</description>
        <encryptionScheme>None</encryptionScheme>
        <label>FSP Not Found</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSP__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FSP</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Enrollments_Account_FSP</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSP_by_Contract__c</fullName>
        <description>The hyperlink returns on reports with words but behind the scenes reports use the hyperlink value; therefore, you may have to use the operator 'Contains' or 'Not Contains' to get reporting to work like you expect.</description>
        <formula>HYPERLINK('/' + FSP__c, if(isblank(FSP__c),'Not FSP ', text(FSP__r.FSP_Contracts_for_year__c) + ' '+ FSP__r.Name), '_self')</formula>
        <label>FSP by Contract</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSP_by_Group__c</fullName>
        <description>The hyperlink returns on reports with words but behind the scenes reports use the hyperlink value; therefore, you may have to use the operator 'Contains' or 'Not Contains' to get reporting to work like you expect.</description>
        <formula>HYPERLINK('/' + FSP__c, if(isblank(FSP__c),'Not FSP ', text(FSP__r.FSP_Groups_for_Year__c) + ' '+ FSP__r.Name), '_self')

/*
if(isblank(FSP__c),'Not FSP ', text(FSP__r.FSP_Groups_for_Year__c) + ' '+ FSP__r.Name)
*/</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FSP by Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GP_Not_Found__c</fullName>
        <description>Holds the GP id that was not found on Account object</description>
        <encryptionScheme>None</encryptionScheme>
        <label>GP Not Found</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GP__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GP</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Enrollments_Account_GP</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GP_by_Contract__c</fullName>
        <description>The hyperlink returns on reports with words but behind the scenes reports use the hyperlink value; therefore, you may have to use the operator 'Contains' or 'Not Contains' to get reporting to work like you expect.</description>
        <formula>HYPERLINK('/' + GP__c, if(isblank(GP__c),'Not GP ', text(GP__r.GP_Contracts_for_Year__c) + ' '+ GP__r.Name), '_self')</formula>
        <label>GP by Contract</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GP_by_Groups__c</fullName>
        <description>The hyperlink returns on reports with words but behind the scenes reports use the hyperlink value; therefore, you may have to use the operator 'Contains' or 'Not Contains' to get reporting to work like you expect.</description>
        <formula>HYPERLINK('/' + GP__c, if(isblank(GP__c),'Not GP ', text(GP__r.GP_Groups_for_Year__c) + ' '+ GP__r.Name), '_self')</formula>
        <label>GP by Groups</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Group Type</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Groups_Medical__c</fullName>
        <label>Groups Medical</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Groups__c</fullName>
        <label>Groups</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Latest_Enrollment__c</fullName>
        <label>Latest Enrollment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>N</fullName>
                </value>
                <value>
                    <fullName>Y</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Metal_Level__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Metal Level</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Business_Indicator__c</fullName>
        <label>New Business Indicator</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>N</fullName>
                </value>
                <value>
                    <fullName>Y</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>On_Cycle__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field checks to be true if a record is on-cycle termed when termination date is exactly a month before renewal date provided that it is the same year or if the termination month is 12 and the renewal month is 1. The formula for this field exist on Enrollment_import_2_50 and its mapped here</description>
        <label>On Cycle</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Enrollments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>PDB_Not_Found__c</fullName>
        <description>Holds the PDB id that was not found in the account object as entity Id</description>
        <encryptionScheme>None</encryptionScheme>
        <label>PDB Not Found</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PDB_Rank_by_Contracts__c</fullName>
        <description>The hyperlink returns on reports with words but behind the scenes reports use the hyperlink value; therefore, you may have to use the operator 'Contains' or 'Not Contains' to get reporting to work like you expect.</description>
        <formula>if(isblank(PDB__c),'04 - 322 ' + 'Direct',if(isblank( PDB__r.PDB_Rank__c ),'Not Ranked',
 if(PDB__r.PDB_Rank__c&lt;10,'0'+text(PDB__r.PDB_Rank__c) + ' - ' + HYPERLINK('/'+ PDB__c, text(PDB__r.PDB_Contracts_for_Year__c) + ' ' + PDB__r.Name ,'_self') ,text(PDB__r.PDB_Rank__c) + ' - ' + HYPERLINK('/'+ PDB__c,text(PDB__r.PDB_Contracts_for_Year__c) + ' '+ PDB__r.Name,'_self'))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PDB Rank by Contracts</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PDB_Rank_by_Groups__c</fullName>
        <formula>if(isblank(PDB__c),'04 - 322 ' + 'Direct',if(isblank( PDB__r.AG_Rank__c ),'Not Ranked',if(PDB__r.PDB_Rank__c&lt;10,'0'+text(PDB__r.PDB_Rank__c) + ' - ' 
+ HYPERLINK('/' + PDB__c, text(PDB__r.PDB_Groups_for_Year__c) + ' ' + PDB__r.Name , '_self') ,text(PDB__r.PDB_Rank__c) + ' - '
 + HYPERLINK('/' + PDB__c, text(PDB__r.PDB_Groups_for_Year__c) + ' '+ PDB__r.Name, '_self'))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PDB Rank by Groups</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PDB__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PDB</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Enrollments (Account)</relationshipLabel>
        <relationshipName>Enrollments_Account_PDB</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PDB_by_Contract__c</fullName>
        <description>The hyperlink returns on reports with words but behind the scenes reports use the hyperlink value; therefore, you may have to use the operator 'Contains' or 'Not Contains' to get reporting to work like you expect.</description>
        <formula>HYPERLINK('/' + PDB__c, if(isblank(PDB__c),'Not PDB ', text(PDB__r.PDB_Contracts_for_Year__c) + ' '+ PDB__r.Name), '_self')</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PDB by Contract</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PDB_by_Groups__c</fullName>
        <description>The hyperlink returns on reports with words but behind the scenes reports use the hyperlink value; therefore, you may have to use the operator 'Contains' or 'Not Contains' to get reporting to work like you expect.</description>
        <formula>HYPERLINK('/' + PDB__c, if(isblank(PDB__c),'Not GP ', text(PDB__r.PDB_Groups_for_Year__c) + ' '+ PDB__r.Name), '_self')</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PDB by Groups</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prev_Baseline_Compensation_Owner__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Prev Baseline Compensation Owner</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prev_Baseline_Contracts__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Prev Baseline Contracts</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prev_Fiscal_Year__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Prev Fiscal Year</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Processed_Type__c</fullName>
        <description>Identifies if the record was from the Medical (M) or the Ancillary (A) file</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Processed Type</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Product</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reinstatement_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Reinstatement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Renewal_Anniversary_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Renewal Anniversary Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reporting_Checkbox_Formula_Off_Cycle__c</fullName>
        <description>this field checks true if either the status is active and the rpt_dt__c is a specified number/date or status is termed and is OFF cycle. This field is used in creating Retention reports to count active and termed data separately but in the same report. 
Note: This field is being used by ReportingChecbox__c</description>
        <formula>if( OR(AND(Rpt_Dt__c="201904",  ISBLANK(Termination_Date__c) ),
      (AND(NOT(ISBLANK(Termination_Date__c)),On_Cycle__c = False))),True,False)</formula>
        <label>Reporting_Checkbox_Formula_Off_Cycle</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reporting_Checkbox_Formula_On_Cycle__c</fullName>
        <description>this field checks true if either the status is active and the rpt_dt__c is a specified number/date or status is termed and is on cycle. This field is used in creating Retention reports to count active and termed data separately but in the same report. 
Note: This field is being used by ReportingChecbox__c</description>
        <formula>if( OR(AND(Rpt_Dt__c="201904",  ISBLANK(Termination_Date__c) ),
      (AND(NOT(ISBLANK(Termination_Date__c)),On_Cycle__c = True))),True,False)</formula>
        <label>Reporting_Checkbox_Formula_On_Cycle</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reporting_Checkbox_Off_Cycle__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Will hold the static data of Reporting_Checkbox_off_cycle__c copied from  Reporting_Checkbox_formula_off_cycle__c</description>
        <inlineHelpText>holds the static data of Reporting_Checkbox_formula_off_cycle__c</inlineHelpText>
        <label>Reporting Checkbox_Off_Cycle</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reporting_Checkbox__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Will hold the static data of Reporting_Checkbox_on_cycle__c</description>
        <inlineHelpText>holds the static data of Reporting_Checkbox_formula_on_cycle__c</inlineHelpText>
        <label>Reporting Checkbox_On_Cycle</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Risk__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Risk</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rpt_Dt__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Rpt Dt</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Run_Dt__c</fullName>
        <description>Date that the import file was created</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Run Dt</label>
        <length>23</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SB_Not_Found__c</fullName>
        <description>holds the SB id of the contact that was not found</description>
        <encryptionScheme>None</encryptionScheme>
        <label>SB Not Found</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SB_Rank_by_Contracts__c</fullName>
        <formula>if(isblank(SB__c),'04 - 322 ' + 'Direct',if(isblank( SB__r.SB_Rank__c ),'Not Ranked',if(SB__r.SB_Rank__c&lt;10,'0'+text(SB__r.SB_Rank__c) + ' - ' 
+ HYPERLINK('/' + SB__c, text(SB__r.Contracts_for_Year__c) + ' ' + SB__r.FirstName + ' ' + SB__r.LastName, '_self') ,text(SB__r.SB_Rank__c) + ' - ' 
 + HYPERLINK('/' + SB__c, text(SB__r.Contracts_for_Year__c) + ' '+ SB__r.FirstName + ' ' + SB__r.LastName, '_self'))))</formula>
        <label>SB Rank by Contracts</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SB_Rank_by_Groups__c</fullName>
        <formula>if(isblank(SB__c),'04 - 322 ' + 'Direct',if(isblank( SB__r.SB_Rank__c ),'Not Ranked',if(SB__r.SB_Rank__c&lt;10,'0'+text(SB__r.SB_Rank__c) + ' - ' 
+HYPERLINK('/' + SB__c, text(SB__r.Groups_for_Year__c) + ' ' + SB__r.FirstName + ' ' + SB__r.LastName, '_self') ,text(SB__r.SB_Rank__c) + ' - ' 
+HYPERLINK('/' + SB__c, text(SB__r.Groups_for_Year__c) + ' '+ SB__r.FirstName + ' ' + SB__r.LastName, '_self'))))</formula>
        <label>SB Rank by Groups</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SB__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SB</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Enrollments_Contact_SB</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sort_Key_Process_Type__c</fullName>
        <description>This field is used by the Sort_Key__c formula field to provide a multi-column custom sort on the enrollment related list found on the opportunity page.  It allows a complete customized sort on the Processed_Type__c field as shown in the Case statement below.</description>
        <formula>CASE( Processed_Type__c , 'M', '4', 
                          'D', '3',
                          'R', '2',
                          'V', '1', 'X')</formula>
        <label>Sort Key Process Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sort_Key__c</fullName>
        <formula>TEXT(Enrl_Rpt_Dt__c) + "/" +Sort_Key_Process_Type__c</formula>
        <label>Sort Key</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Termed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Summary_Checkbox__c</fullName>
        <description>This field checks true if either the status is active and the rpt_dt__c is a specified numbers/dates for the same Renewal anniversary year as the Year of the Rpt_dt, or status is termed and is on cycle.  
Note: This field is being used by Joe for the block report. this check box also looks at december 2013 active file</description>
        <formula>if(
	OR(
		AND(
			AND(
				(Rpt_Dt__c="201412" || (Rpt_Dt__c="201312") || Rpt_Dt__c="201512" || Rpt_Dt__c="201612" || Rpt_Dt__c="201712" || Rpt_Dt__c="201812"|| Rpt_Dt__c="201904"), 
				(Left(Rpt_Dt__c,4) = TEXT(YEAR(Renewal_Anniversary_Date__c)))
			),
			ISBLANK(Termination_Date__c) ),
      			(
				AND(
					NOT(ISBLANK(Termination_Date__c)),
					On_Cycle__c = True)
			)
	),
True,False
)



/**********************************************************/
/*if(OR(AND(Rpt_Dt__c="201412", ISBLANK(Termination_Date__c)), 
      AND(Rpt_Dt__c="201312", ISBLANK(Termination_Date__c)),
     (AND(NOT(ISBLANK(Termination_Date__c)),On_Cycle__c = True))),True,False)
*/
/*
if( OR(AND(Rpt_Dt__c="201412" || (Rpt_Dt__c="201312") ,  ISBLANK(Termination_Date__c) ),
      (AND(NOT(ISBLANK(Termination_Date__c)),On_Cycle__c = True))),True,False)
*/</formula>
        <label>Summary_Checkbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>System__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>System</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Termination_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Termination Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Termination_Reason__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Termination Reason</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <description>This object holds the actual enrollment data which is associated to the opportunity</description>
    <label>Enrollment</label>
    <nameField>
        <displayFormat>E-{00000}</displayFormat>
        <label>Enrollments Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Enrollments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>Opportunity__c</columns>
        <columns>Rpt_Dt__c</columns>
        <columns>System__c</columns>
        <columns>Account_Number__c</columns>
        <columns>Product__c</columns>
        <columns>Contracts__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Reporthing_Checkbox_Count</fullName>
        <booleanFilter>(1 AND 3) OR (2 AND 4)</booleanFilter>
        <columns>NAME</columns>
        <columns>Rpt_Dt__c</columns>
        <columns>Reporting_Checkbox_Formula_Off_Cycle__c</columns>
        <columns>Reporting_Checkbox_Formula_On_Cycle__c</columns>
        <columns>Reporting_Checkbox_Off_Cycle__c</columns>
        <columns>Reporting_Checkbox__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Summary_Checkbox__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Reporting_Checkbox__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Reporting_Checkbox_Off_Cycle__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Reporting_Checkbox_Off_Cycle__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Reporting_Checkbox__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Reporthing Checkbox Match</label>
    </listViews>
    <recordTypes>
        <fullName>X2_50</fullName>
        <active>true</active>
        <description>2-50 Enrollment Record Type</description>
        <label>2-50</label>
    </recordTypes>
    <recordTypes>
        <fullName>X51</fullName>
        <active>true</active>
        <description>51+ Enrollment Record Type</description>
        <label>51+</label>
    </recordTypes>
</CustomObject>